--- a/MainProject/MainProject.csproj
+++ b/MainProject/MainProject.csproj
@@ -101,6 +101,9 @@
     <EmbeddedResource Include="UI\LoginFrm.resx">
       <DependentUpon>LoginFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\MainFrm.resx">
+      <DependentUpon>MainFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
